# distrod

./: .gitignore  README.md  index.html  package-lock.json  package.json
excluded/docs/: CHANGELOG.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: distro.rs  file.rs  mod.rs  network.rs  process.rs  pty.rs  resource.rs  services.rs  snapshot.rs  terminal.rs  window.rs
src-tauri/src/wsl/: distro.rs  mod.rs  network.rs  process.rs  pty.rs  resource.rs  services.rs
src/components/: ThemeProvider.tsx
src/components/brand/: DistrodLogo.tsx
src/components/distro/: DistroCard.tsx
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx  StatusBadge.tsx  TitleBar.tsx
src/hooks/: useDistroSync.ts  useDistros.ts  usePolling.ts  useResources.ts  useTauriInvoke.ts
src/pages/: DistrosPage.tsx  FilesPage.tsx  NetworkPage.tsx  NginxPage.tsx  ProcessesPage.tsx  ResourcesPage.tsx  ServicesPage.tsx  SettingsPage.tsx  SnapshotsPage.tsx  TerminalPage.tsx
src/store/: distroStore.ts  processStore.ts  resourceStore.ts  snapshotStore.ts  themeStore.ts  uiStore.ts
src/themes/: themes.ts
src/types/: index.ts
