[package]
name = "distrod"
version = "0.1.0"
description = "WSL Dashboard — visual manager for Windows Subsystem for Linux"
authors = ["Chandan Bhagat"]
edition = "2021"

[lib]
name = "distrod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
